# internal/entity/user.go
@@ -6,7 +6,7 @@ type User struct {
 	ProfilePicture string `gorm:"type:varchar(255);column:profile_picture"`
 	PhoneNumber    string `gorm:"type:varchar(20);not null;column:phone_number"`
 	Email          string `gorm:"type:varchar(255);unique;not null;column:email"`
-	Password       string `gorm:"type:varchar(255);not null;column:password"`
+	Password       string `gorm:"type:varchar(255);column:password"`
 	Role           string `gorm:"type:user_type;not null;column:role"`
 }
 
